# mobiler

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  capabilities.json
demos/barbershop/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
demos/barbershop/Android/: build-android.sh  settings.gradle.kts
demos/barbershop/Android/app/: build.gradle.kts
demos/barbershop/Android/app/src/main/: AndroidManifest.xml
demos/barbershop/Android/app/src/main/res/values/: strings.xml  themes.xml
demos/barbershop/Android/shared/: build.gradle.kts
demos/barbershop/app-core/: Cargo.toml
demos/barbershop/app-core/src/: lib.rs
demos/barbershop/iOS/: build-ios.sh  project.yml
demos/barbershop/iOS/Sources/: App.swift  Info.plist
demos/barbershop/shared/: Cargo.toml  uniffi.toml
demos/barbershop/shared/src/: lib.rs
demos/barbershop/web/: Cargo.toml  index.html
demos/barbershop/web/src/: main.rs
demos/coffee/: Cargo.toml  README.md
demos/coffee/Android/: settings.gradle.kts
demos/coffee/Android/app/: build.gradle.kts
demos/coffee/Android/app/src/main/: AndroidManifest.xml
demos/coffee/Android/shared/: build.gradle.kts
demos/coffee/iOS/: build-ios.sh  project.yml
demos/coffee/iOS/Sources/: App.swift  BiometricPlugin.swift  Core.swift  Info.plist  NotificationsPlugin.swift  Render.swift  ScannerPlugin.swift  SecureStorePlugin.swift  WebSocketPlugin.swift
demos/coffee/iOS/UITests/: CoffeeUITests.swift
demos/coffee/shared/: Cargo.toml  uniffi.toml
demos/coffee/shared/src/: app.rs  ffi.rs
demos/coffee/web/: Cargo.toml  index.html
demos/coffee/web/src/: main.rs
demos/fullstack-sqlx/: .gitignore  Cargo.toml  README.md
demos/fullstack-sqlx/app-core/: Cargo.toml
demos/fullstack-sqlx/app-core/src/: lib.rs
demos/fullstack-sqlx/domain/: Cargo.toml
demos/fullstack-sqlx/domain/src/: lib.rs
demos/fullstack-sqlx/server/: Cargo.toml  litestream.yml
demos/fullstack-sqlx/server/src/: main.rs
demos/fullstack-sqlx/web/: Cargo.toml  index.html
demos/fullstack-sqlx/web/src/: main.rs
demos/fullstack-todo/: Cargo.toml  README.md
demos/fullstack-todo/domain/: Cargo.toml
demos/fullstack-todo/domain/src/: lib.rs
demos/fullstack-todo/mobile/: .gitignore
demos/fullstack-todo/mobile/Android/: settings.gradle.kts
demos/fullstack-todo/mobile/Android/app/: build.gradle.kts
demos/fullstack-todo/mobile/Android/app/src/main/: AndroidManifest.xml
demos/fullstack-todo/mobile/Android/shared/: build.gradle.kts
demos/fullstack-todo/mobile/iOS/: build-ios.sh  project.yml
demos/fullstack-todo/mobile/iOS/Sources/: App.swift  Info.plist  Render.swift
demos/fullstack-todo/mobile/shared/: Cargo.toml  uniffi.toml
demos/fullstack-todo/mobile/shared/src/: app.rs
demos/fullstack-todo/server/: Cargo.toml
demos/fullstack-todo/server/src/: main.rs
demos/fullstack-todo/todo-core/: Cargo.toml
demos/fullstack-todo/todo-core/src/: lib.rs
demos/fullstack-todo/web-json/: Cargo.toml  index.html
demos/fullstack-todo/web-json/src/: main.rs
demos/fullstack-todo/web-widgets/: Cargo.toml  index.html
demos/fullstack-todo/web-widgets/src/: main.rs
demos/todo/web/: Cargo.toml  index.html
demos/todo/web/src/: main.rs
mobiler/: Cargo.toml  LICENSE-MIT  README.md
mobiler-core/: Cargo.toml  README.md
mobiler-core/src/: lib.rs
mobiler-ui/: Cargo.toml  README.md
mobiler-ui/src/: lib.rs
mobiler-web/: Cargo.toml  README.md
mobiler-web/src/: lib.rs  mobiler.css
mobiler/agentic/: CLAUDE.md  api.md  shared-ui.md
mobiler/plugins/battery/: mobiler-plugin.toml
mobiler/plugins/battery/android/: BatteryPlugin.kt
mobiler/plugins/battery/ios/: BatteryPlugin.swift
mobiler/plugins/biometric/: README.md  app-core-usage.rs  mobiler-plugin.toml
mobiler/plugins/biometric/android/: BiometricPlugin.kt
mobiler/plugins/connectivity/: mobiler-plugin.toml
mobiler/plugins/connectivity/android/: ConnectivityPlugin.kt
mobiler/plugins/connectivity/ios/: ConnectivityPlugin.swift
mobiler/plugins/filepicker/: mobiler-plugin.toml
mobiler/plugins/filepicker/android/: FilePickerActivity.kt  FilePickerPlugin.kt
mobiler/plugins/filepicker/ios/: FilePickerPlugin.swift
mobiler/plugins/geolocation/: mobiler-plugin.toml
mobiler/plugins/geolocation/android/: GeolocationPlugin.kt
mobiler/plugins/geolocation/ios/: GeolocationPlugin.swift
mobiler/plugins/notifications/: README.md  app-core-usage.rs  mobiler-plugin.toml
mobiler/plugins/notifications/android/: NotificationsPlugin.kt
mobiler/plugins/scanner/: README.md  app-core-usage.rs  mobiler-plugin.toml
mobiler/plugins/scanner/android/: ScannerPlugin.kt
mobiler/plugins/scanner/ios/: ScannerPlugin.swift
mobiler/plugins/securestore/: README.md  mobiler-plugin.toml
mobiler/plugins/securestore/android/: SecureStorePlugin.kt
mobiler/plugins/websocket/: README.md  app-core-usage.rs  mobiler-plugin.toml
mobiler/plugins/websocket/android/: WebSocketPlugin.kt
mobiler/src/: add_widget.rs  build.rs  dev.rs  doctor.rs  main.rs  new.rs  plugin.rs  templating.rs  upgrade.rs  watch.rs
mobiler/templates/: .gitignore  Cargo.toml.tmpl
mobiler/templates/Android/: settings.gradle.kts
mobiler/templates/Android/app/: build.gradle.kts
mobiler/templates/Android/app/src/main/: AndroidManifest.xml
mobiler/templates/Android/shared/: build.gradle.kts
mobiler/templates/iOS/: build-ios.sh  project.yml
mobiler/templates/iOS/Sources/: App.swift  Core.swift  Info.plist  Render.swift
mobiler/templates/shared/: Cargo.toml.tmpl  uniffi.toml
mobiler/templates/shared/src/: app.rs  ffi.rs
prototype/abi/: Cargo.toml
prototype/abi/Android/: settings.gradle.kts
prototype/abi/Android/app/: build.gradle.kts
prototype/abi/Android/app/src/main/: AndroidManifest.xml
prototype/abi/Android/shared/: build.gradle.kts
prototype/abi/mobiler-core/: Cargo.toml
prototype/abi/mobiler-core/src/: lib.rs
prototype/abi/mobiler-ui/: Cargo.toml
prototype/abi/mobiler-ui/src/: lib.rs
prototype/abi/shared/: Cargo.toml  uniffi.toml
prototype/abi/shared/src/: app.rs  ffi.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+77 files in other folders)
