[package]
name = "mobiler-core"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Mobiler runtime: the MobilerApp trait + Crux shell adapter over the fixed UI ABI"
repository = "https://github.com/mobiler/mobiler"
readme = "README.md"

[features]
# Enables the typegen `Export` impl on `Effect` (turned on by the codegen build).
facet_typegen = ["crux_core/facet_typegen"]

[dependencies]
crux_core.workspace = true
mobiler-ui = { path = "../mobiler-ui", version = "0.5.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
facet = { version = "=0.44", features = ["chrono"] }
