[package]
name = "mobiler-ui"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Mobiler's fixed UI wire ABI — app-agnostic Widget tree + Action protocol"
repository = "https://github.com/mobiler/mobiler"
readme = "README.md"

[dependencies]
facet = { version = "=0.44", features = ["chrono"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1"
