[package]
name = "mobiler"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Mobiler — Rust + Compose mobile framework CLI"
repository = "https://github.com/mobiler/mobiler"
homepage = "https://github.com/mobiler/mobiler"
readme = "README.md"
keywords = ["mobile", "android", "compose", "crux", "cross-platform"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mobiler"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"
notify = "8"
notify-debouncer-full = "0.7"
which = "8"
