[package]
name = "mobiler"
version = "0.17.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Build mobile apps in Rust — one core, native UI on Android, iOS, and the web (CLI)"
repository = "https://github.com/mobiler/mobiler"
homepage = "https://github.com/mobiler/mobiler"
readme = "README.md"
keywords = ["mobile", "android", "ios", "crux", "cross-platform"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mobiler"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
diffy = "0.4"
include_dir = "0.7"
notify = "8"
notify-debouncer-full = "0.7"
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
which = "8"
