[workspace]
resolver = "3"
members = ["shared"]

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
anyhow = "1.0.102"
crux_core = "0.18.0"
serde = "1.0.228"

[profile.android-dev]
inherits = "dev"

# Release builds (the device/release APK + iOS device .ipa) optimize for size and
# strip symbols, so the shipped native libs are a few MB instead of ~16 MB debug.
[profile.release]
opt-level = "z"
strip = true
