[workspace]
resolver = "3"
members = ["shared", "mobiler-ui", "mobiler-core"]

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
anyhow = "1.0.102"
crux_core = "0.18.0"
serde = "1.0.228"

[profile.android-dev]
inherits = "dev"
