[package]
name = "barbershop-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# The Mobiler app core — logic AND UI in Rust. Rendered by the web client here; a mobile
# build would point a `mobiler new` scaffold's `shared` crate at this one.
[dependencies]
serde.workspace = true
serde_json.workspace = true
mobiler-core = { path = "../../../mobiler-core" }
