[package]
name = "app-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# The Mobiler app core — logic AND UI in Rust. Rendered by the web client here, and by a
# mobile app (run `mobiler new`, then point its `shared` crate at this one). Talks to the
# Axum/SQLx server over HTTP via `cx`.
[dependencies]
domain.workspace = true
serde.workspace = true
serde_json.workspace = true
mobiler-core = { path = "../../../mobiler-core" }
