[package]
name = "todo-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# A pure library: the Mobiler app (logic + view→Widget). Reused verbatim by the
# native `mobile` FFI crate AND the `web-widgets` WASM shell. Self-contained (no
# workspace inheritance) so it's portable across those separate workspaces.
[lib]
crate-type = ["lib"]

[dependencies]
domain = { path = "../domain" }
mobiler-core = { path = "../../../mobiler-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
