[package]
name = "web-widgets"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# The Widget→DOM web client: the SAME todo-core, rendered to the DOM by the generic
# `mobiler-web` shell. The app code is one line — mobiler-web does all the rendering.
# Standalone workspace (trunk build).
[workspace]

[dependencies]
mobiler-web = { path = "../../../mobiler-web" }
todo-core = { path = "../todo-core" }
